Fix the case of two adjacent placeholders for the i18n replacement logic https://bugs.webkit.org/show_bug.cgi?id=312967

Reviewed by Timothy Hatcher.

The regex (?:[^$]|^)(\$NAME\$) requires a non-$ guard character immediately before each placeholder unless the placeholder is at the beginning of a string. Advancing by replacement.length() - 1 keeps the last inserted char within the search window, letting it serve as the guard for an immediately following placeholder.

Test: Tools/TestWebKitAPI/Tests/WebKit/WKWebView/WKWebExtensionAPILocalization.mm

* Source/WebKit/Shared/Extensions/WebExtensionLocalization.cpp:
(WebKit::WebExtensionLocalization::stringByReplacingNamedPlaceholdersInString):
(WebKit::WebExtensionLocalization::stringByReplacingPositionalPlaceholdersInString):
* Tools/TestWebKitAPI/Tests/WebKit/WKWebView/WKWebExtensionAPILocalization.mm:
(TestWebKitAPI::TEST(WKWebExtensionAPILocalization, Placeholders)):

Canonical link: https://commits.webkit.org/311769@main