Tools/TestWebKitAPI/Tests/WebKit/WKWebView/WKWebExtensionAPILocalization.mm
@@ -473,6 +473,17 @@ TEST(WKWebExtensionAPILocalization, Placeholders)
                 },
             },
         },
+        @"key12": @{
+            messageKey: @"$prefix$$suffix$",
+            placeholdersKey: @{
+                @"prefix": @{
+                    placeholderDictionaryContentKey: @"$1",
+                },
+                @"suffix": @{
+                    placeholderDictionaryContentKey: @"$2",
+                },
+            },
+        },
     };
 
     auto *backgroundScript = Util::constructScript(@[
@@ -491,6 +502,7 @@ TEST(WKWebExtensionAPILocalization, Placeholders)
         @"browser.test.assertEq(browser.i18n.getMessage('key9', placeholders), 'v3')",
         @"browser.test.assertEq(browser.i18n.getMessage('key10', placeholders), 'v3.4版')",
         @"browser.test.assertEq(browser.i18n.getMessage('key11', placeholders), '3 4')",
+        @"browser.test.assertEq(browser.i18n.getMessage('key12', placeholders), '34')",
 
         [NSString stringWithFormat:@"placeholders = %@", Util::constructJSArrayOfStrings(@[ @"irrelevant", @"argument value" ])],
         @"browser.test.assertEq(browser.i18n.getMessage('key5', placeholders), ' and argument value')",
